# ImageViewer

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
imageviewer/: __init__.py  app.py
imageviewer/core/: __init__.py  extensions.py
imageviewer/view/: __init__.py  main_window.py
imageviewer/view/widgets/: __init__.py  image_view.py  index_area.py
