[tool.poetry]
name = "imageviewer"
version = "0.1.0"
description = "A simple image viewer made in Python."
authors = ["Lucas Cavalcante da Silva <silva.lucasdev@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
pyqt5 = "^5.14.1"

[tool.poetry.dev-dependencies]
yapf = "^0.29.0"
flake8 = "^3.7.9"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
